@@ -1,77 +1,0 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<Settings>
-	<language>
-		<about>informazioni</about>
-		<thanks>ringraziamenti</thanks>
-		<frmabout>informazioni su ...</frmabout>
-		<frmset>Settings porta seriale</frmset>
-		<description>strumento per inviare comandi alla card mediante lettori di tipo PC/SC e seriale</description>
-		<notimplemented>Funzionalità non ancora implementata</notimplemented>
-		
-		<openact>Apri un file comandi</openact>
-		<infoact>Visualizza la finestra di informazioni</infoact>
-		<exitact>Esci dall'applicazione</exitact>
-		<atract>Risposta della card al Power On</atract>
-		
-		<filemenulbl>_File</filemenulbl>
-		<openmenulbl>_Apri file comandi</openmenulbl>
-		<closemenulbl>_Chiudi file comandi</closemenulbl>
-		<settingsmenulbl>Settings porta seriale</settingsmenulbl>
-		<exitmenulbl>_Esci</exitmenulbl>
-		<readermenulbl>_Lettore</readermenulbl>
-		<helpmenulbl>A_iuto</helpmenulbl>
-		<infomenulbl>I_nformazioni</infomenulbl>
-		
-		
-		<openlbl>Apri</openlbl>
-		<cancellbl>Annulla</cancellbl>
-		<closelbl>Chiudi</closelbl>
-		<infolbl>Info</infolbl>
-		<exitlbl>Esci</exitlbl>	
-		<settingslbl>Settings</settingslbl>
-		<atrlbl>ATR</atrlbl>		
-		<cmdlbl>comando</cmdlbl>
-		<resplbl>risposta</resplbl>
-		<sendlbl>invia</sendlbl>
-		
-		
-		<atrframelbl>Risposta al reset</atrframelbl>
-		<cardframelbl>Comunicazione card</cardframelbl>
-		<commandfilelbl>File comandi</commandfilelbl>
-		<selectfile>Seleziona il file comandi da aprire</selectfile>
-		<noinitreader>Card nel lettore non inizializzata, eseguire prima ATR</noinitreader>
-		
-		<selreader>Lettore selezionato</selreader>
-		<nopcscreader>Non è stato trovato nessun lettore PCSC</nopcscreader>
-		<readerslist>Lista dei lettori disponibili</readerslist>
-		<readersel>Inserisci il numero del lettore da usare (scrivi EXIT per uscire)</readersel>
-		<cmdtosend>Inserisci il comando da inviare (scrivi EXIT per uscire)</cmdtosend>
-		<wrongcmd>formato del comando errato (puoi usare: 0x11 0x22 0x33... etc, oppure 11 22 33.. etc, oppure 112233)</wrongcmd>
-		
-		<infodesc><![CDATA[Applicazione cross platform scritta in C# per inviare/ricevere dati ad un lettore PC/SC standard.<br> 
-		- Multilanguage (usando files di lingua xml nella cartella <i>Language</i>)<br> 
-		- Gui (usando il binding GTK# delle librerie grafiche GTK e il binding Qyoto delle librerie grafiche QT)<br> 
-		- Supportata anche l'interfaccia Console<br> 
-		- Debug/Trace (può essere inviato sia alla console che ad un file di log da consultare successivamente)<br> 
-<br> 
-		<b>scelta rapida sulla riga dell'area file comandi:</b><br> 
-		&nbsp;&nbsp;&nbsp;F5: copia il comando dalla riga selezionata all'apposito campo<br> 
-		&nbsp;&nbsp;&nbsp;F6: invia direttamente il comando contenuto nella riga selezionata<br> 
-		&nbsp;&nbsp;&nbsp;doppio click: stessa cosa di F5<br> 
-<br> 
-		<b>autore:</b><br> 
-		&nbsp;&nbsp;&nbsp;Armando Basile (<a href="mailto:hmandevteam@gmail.com">hmandevteam@gmail.com</a>)<br> 
-<br> 		
-		<b>sito web:</b><br> 
-		&nbsp;&nbsp;&nbsp;<a href="http://comex-project.googlecode.com">comex-project.googlecode.com</a><br> 
-<br> 
-		<b>segnalazioni:</b><br> 
-		&nbsp;&nbsp;&nbsp;<a href="http://code.google.com/p/comex-project/issues/list">code.google.com/p/comex-project/issues/list</a><br> 
-		]]></infodesc>
-		
-		<thanksdesc><![CDATA[Si ringraziano gli sviluppatori, tester, traduttori, web designer e 
-		tutti coloro che hanno collaborato in qualsiasi forma al progetto.
-		]]></thanksdesc>
-		
-	</language>
-</Settings>
